--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sistema.css">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="sistema-celular.css">
-    <script src="script.js"></script>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="style-home/pc.css" media = 'all'>
+    <link rel="stylesheet" href="style-home/iphone.css" media = ''>
+    <script src="script.js" defer></script>
+   
 
     <title>Sistema do cartão MAIS FAMÍLIA</title>
 </head>
@@ -73,7 +71,7 @@
 
         <div class='container_consulta_form' id='form'>
 
-            <form action='' autocomplete='off'>
+            <form action='' autocomplete='off' method="POST" action = "arquivo.php">
                 <label for='nome_empresa'>Nome da sua rede:</label><input type='text' id='nome_empresa'
                     placeholder='Nome da sua empresa' maxlength='10' required><br>
                 <label for='nome_cliente'>Nome do cliente:</label><input type='text' id='nome_cliente'
