--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class='botao' id='ativar_consulta'><img src='imagens/icons/procura-cliente.png' height='25px'
                     alt='logo do Whats-App'>Consultar associado </div>
 
-            <a id = 'entre-contato' href=""><img src='imagens/icons/zap.png' height='30px' alt='logo do Whats-App'>Entre
+            <a id = 'entre-contato' href="https://api.whatsapp.com/send?phone=5513996897116&text=Ol%C3%A1%20meu%20nome%20%C3%A9...........%20sou%20da%20cl%C3%ADnica...........%20%20Estou%20tendo%20d%C3%BAvidas%20e%20como%20fazer%20a%20consulta"><img src='imagens/icons/zap.png' height='30px' alt='logo do Whats-App'>Entre
                 em contato</a>
 
 
