--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style-home/pc.css" media='all'>
-    <link rel="stylesheet" href="style-home/iphone.css" media='screen'>
+    <link rel="stylesheet" href="style-home/home-pc.css" media='all'>
+    <link rel="stylesheet" href="style-home/home-iphone.css" media='screen'>
     <script src='script.js' defer></script>
     <title>Sistema MAIS FAMÍLIA</title>
 </head>
@@ -19,9 +19,9 @@
 
     <menu id='menu' class="scale-up-hor-right">
         <img id='img-menu-ativo' src='imagens/icons/menu.png' alt='menu'>
-        <img class='icon-menu' src='imagens/icons/atendimento-cliente.png'><a href='#'></a>
-        <img class='icon-menu' src='imagens/icons/cliente.png'><a href='#'></a>
-        <img class='icon-menu' src='imagens/icons/procura-cliente.png'><a href='#'></a>
+        <a href="log.html" target="_self"><img class='icon-menu' src='imagens/icons/atendimento-cliente.png'></a>
+        <a href="log.html" target="_self"><img class='icon-menu' src='imagens/icons/cliente.png'></a>
+        <a href="log.html" target="_self"><img class='icon-menu' src='imagens/icons/procura-cliente.png'></a>
     </menu>
 
 
@@ -40,6 +40,8 @@
 
 
         </div>
+       
+       
         <form id='form_container' method="POST" action="" class="anim_simples_02">
 
 
