--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 <body>
     <header>
-        <a href="index.html"><img id='logotipo' src='imagens/logo/logo.png' alt='logo do cartão MAIS FAMÍLIA'></a>
+        <a href="index.html"><img id='logotipo' src='imagens/logo/logo02.png' alt='logo do cartão MAIS FAMÍLIA'></a>
         <img id='menu_icon' src='imagens/icons/menu.png' alt='menu'>
     </header>
 
     <menu id='menu' class="scale-up-hor-right">
         <img id='img-menu-ativo' src='imagens/icons/menu.png' alt='menu'>
         <a href="log.html" target="_self"><img class='icon-menu' src='imagens/icons/atendimento-cliente.png'></a>
-        <a href="log.html" target="_self"><img class='icon-menu' src='imagens/icons/cliente.png'></a>
+        <a href="sistema.html" target="_self"><img class='icon-menu' src='imagens/icons/cliente.png'></a>
         <a href="log.html" target="_self"><img class='icon-menu' src='imagens/icons/procura-cliente.png'></a>
     </menu>
 
