--- a/log.html
+++ b/log.html
@@ -22,7 +22,7 @@
         <form method="POST" action="log-test.php" name="form">
 
           
-           <h2>Acesso restrito</h2>
+           <h2>Apenas funcionários</h2>
             
             <label for="email">E-mail:</label>
             <input type="email" name="email" id="email" >
