--- a/home/index.html
+++ b/home/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="#"><img id='logotipo' src='img-all/logo-all/logo-write.png' alt='logo do cartão MAIS FAMÍLIA'></a>
-        <a href=""><img id='icon' src='img-all/icons-all/icon-log.png' alt='icone'></a>
+        <a id = "icone-log" href=""><img src="img-all/icons-all/icon-log.png" alt="icone de login"></a>
     </header>
 
 
@@ -24,7 +24,7 @@
             <p class="anim_txt" id='p_msg'>Seja bem vindo ao sistema de consulta do cartão MAIS FAMÍLIA.</p>
 
             <div class="bottom_consultar">
-                <img id = "icon"src='img-all/icons-all/procura-cliente.png' height='27px' alt='logo do Whats-App'><a
+                <img id = "icon"src='img-all/icons-all/procura-cliente.png'  alt='logo do Whats-App'><a
                     href="form">Consultar associado</a>
             </div>
 
@@ -32,16 +32,14 @@
 
 
         <article id='img_container'>
-            <img id="foto_main"
-                src='https://liferay-cdn.estacioprd.net/documents/316123/387890/COMPLIANCE-NA-GESTA%E2%95%A0%C3%A2O-PU%E2%95%A0%C3%BCBLICA_banner.png/6172f705-4a26-a0be-b0f5-e55e66126efc?t=1596414340077'
-                height="500px">
+            <img id="foto_main"src='https://www.serasa.com.br/assets/cms/2022/Empre%CC%81stimo-com-antecipac%CC%A7a%CC%83o-FGTS_-como-solicitar-pelo-eCred_.png'height="500px">
         </article>
 
     </main>
 
 
 
-    <section class="anim_simples">
+    <section>
 
         <form method="POST" action="sistema-consulta/consultando-ass.php">
 
