--- a/home/index.html
+++ b/home/index.html
@@ -32,7 +32,7 @@
 
 
         <article id='img_container'>
-            <img id="foto_main"src='https://www.serasa.com.br/assets/cms/2022/Empre%CC%81stimo-com-antecipac%CC%A7a%CC%83o-FGTS_-como-solicitar-pelo-eCred_.png'height="500px">
+            <img id="foto_main"src='https://liferay-cdn.estacioprd.net/documents/316123/356403/ESTETICA_banner.png/f88d7689-297f-6864-e6bf-758a76278eb3?t=1595608609835'height="500px">
         </article>
 
     </main>
