--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
 
         <div id="container_one">
-            <h4>Rápido, fácil e pratico!</h4>
+            <h4>Rápido, fácil e prático!</h4>
 
             <h1>
                 Seja bem vindo ao nosso sistema de consulta ao associado.
