--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/style-index/index-screen.css" media='screen'>
     <link rel="stylesheet" href="styles/style-index/index-ipad.css" media='screen'>
     <link rel="shortcut icon" href="img-all/favicon/favicon.ico" type="image/x-icon">
-    <title>Sistema de consulta do cartão MAIS FAMÍLIA</title>
+    <title>Sistema de consulta - cartão MAIS FAMÍLIA</title>
 </head>
 
 <body>
@@ -24,15 +24,15 @@
             <h4>Rápido, fácil e prático!</h4>
 
             <h1>
-                Seja bem vindo ao nosso sistema de consulta ao associado.
+                Seja bem-vindo ao nosso sistema de consulta ao associado.
             </h1>
 
             <p>
                 Caso tenha duvidas de como consultar o seu associado em nosso sistema de consulta, <a
-                    id="link-whaatsApp" href="">click aqui</a> e tire suas dúvidas com o escritório.
+                    id="link-whaatsApp" href="https://wa.me/5513988081192?text=Ol%C3%A1%2C+estou+tendo+d%C3%BAvidas+de+como+consultar+o+associado.+Pode+me+ajudar.%3F" target = "_blank" rel = "externol">click aqui</a> e tire suas dúvidas com o escritório.
             </p>
 
-            <a id="link-consultar" href=""#form>Consultar associado</a>
+            <a id="link-consultar" href="#form">Consultar associado</a>
 
 
         </div>
@@ -42,7 +42,7 @@
     </main>
 
 
-    <section name ="form">
+    <section id ="form">
 
         <form method="POST" action="sistema-consulta/consultando-ass.php" >
 
