--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </h1>
 
             <p>
-                Caso tenha duvidas de como consultar o seu associado em nosso sistema de consulta, <a
+                Caso tenha dúvidas de como consultar o seu associado em nosso sistema de consulta, <a
                     id="link-whaatsApp" href="https://wa.me/5513988081192?text=Ol%C3%A1%2C+estou+tendo+d%C3%BAvidas+de+como+consultar+o+associado.+Pode+me+ajudar.%3F" target = "_blank" rel = "externol">click aqui</a> e tire suas dúvidas com o escritório.
             </p>
 
