--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
 
-        <img id="imagem-one" src="https://cdns1.2rscms.com.br/custom/2289/uploads/cartao/moca-com-cartao-dois.png" alt="mulher-segurando-cartao-mais-família">
+        <img id="imagem-one" src="img-all/fotos-all/mulher-segurando-cartao.png" alt="mulher-segurando-cartao-mais-família">
     </main>
 
 
