--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
 
-        <img id="imagem-one" src="img-all/fotos-all/mulher-segurando-cartao.png" alt="mulher-segurando-cartao-mais-família">
+        <img id="imagem-one" src="https://cdns1.2rscms.com.br/custom/2289/uploads/cartao/moca-com-cartao-dois.png" alt="mulher-segurando-cartao-mais-família">
     </main>
 
 
@@ -53,7 +53,7 @@
 
 
             <label for="name_titular">Nome e sobrenome do titular:</label>
-            <input type="text" id="name_titular" name="name_titular" placeholder="Araujo souza" maxlength="22">
+            <input type="text" id="name_titular" name="name_titular" placeholder="Lorrany souza" maxlength="22">
 
             <label for="code_carteirinha">Nº carteirinha:</label>
             <input type="text" id="code_carteirinha" name="code_carteirinha" placeholder=" Ultimos quatro dígitos (xxxx)" required maxlength="4">
