--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </h1>
 
             <p>
-                Caso tenha dúvidas de como consultar o seu associado em nosso sistema de consulta, <a
-                    id="link-whaatsApp" href="https://wa.me/5513988081192?text=Ol%C3%A1%2C+estou+tendo+d%C3%BAvidas+de+como+consultar+o+associado.+Pode+me+ajudar.%3F" target = "_blank" rel = "externol">click aqui</a> e tire suas dúvidas com o escritório.
+                Caso tenha dúvidas de como consultar o seu associado no nosso sistema de consulta, <a
+                    id="link-whaatsApp" href="https://wa.me/5513988081192?text=Ol%C3%A1%2C+estou+tendo+d%C3%BAvidas+de+como+consultar+o+associado.+Pode+me+ajudar.%3F" target = "_blank" rel = "externol">clique aqui</a> e tire as suas dúvidas com o escritório.
             </p>
 
             <a id="link-consultar" href="#form">Consultar associado</a>
@@ -53,10 +53,10 @@
 
 
             <label for="name_titular">Nome e sobrenome do titular:</label>
-            <input type="text" id="name_titular" name="name_titular" placeholder="Lorrany souza" maxlength="22">
+            <input type="text" id="name_titular" name="name_titular" placeholder="Lorrany Lima" maxlength="22">
 
             <label for="code_carteirinha">Nº carteirinha:</label>
-            <input type="text" id="code_carteirinha" name="code_carteirinha" placeholder=" Ultimos quatro dígitos (xxxx)" required maxlength="4">
+            <input type="text" id="code_carteirinha" name="code_carteirinha" placeholder=" Últimos quatro dígitos (xxxx)" required maxlength="4">
 
             <div id="container_submit"><input id="bottom-consultar" type="submit" name="submit" value="Consultar associado"></div>
         </form>
