--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <a href="#"><img id='logo' src='img-all/logo-all/logo-sem-fundo.png' alt='logo do cartão MAIS FAMÍLIA'></a>
-        <a id="Link-login" href="">Login</a>
+        <a id="Link-login" href="sistema-log/login.html">Login</a>
     </header>
 
     <main>
