--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/style-index/index-screen.css" media='screen'>
     <link rel="stylesheet" href="styles/style-index/index-ipad.css" media='screen'>
     <link rel="shortcut icon" href="img-all/favicon/favicon.ico" type="image/x-icon">
-    <title>Sistema de consulta - cartão MAIS FAMÍLIA</title>
+    <title>Consulta ao associado - cartão MAIS FAMÍLIA</title>
 </head>
 
 <body>
