--- a/sistema-log/login.html
+++ b/sistema-log/login.html
@@ -26,7 +26,7 @@
             </h1>
 
             <h3>
-                Acesso restrito funcionários!
+                Restrito para funcionários!
             </h3>
 
          
