--- a/sistema-log/sistema-cartao.html
+++ b/sistema-log/sistema-cartao.html
@@ -18,7 +18,7 @@ $logado = $_SESSION['email'];
     <link rel="stylesheet" href="../styles/style-sistema/sistema-all.css" media="all">
     <link rel="stylesheet" href="../styles/style-sistema/sistema-ipad.css" media="screen">
     <link rel="stylesheet" href="../styles/style-sistema/sistema-screen.css" media="screen">
-    <title> stm - cartão MAIS FAMÍLIA</title>
+    <title> CAM - cartão MAIS FAMÍLIA</title>
 </head>
 
 <body>
@@ -39,29 +39,29 @@ $logado = $_SESSION['email'];
 
             <a class="link-card" href="">
                 <div class="card">
-                    <img class="img-card" src="../img-all/icons-sistema/painel-controle.png" alt="associados bloqueados">
-                    <h3 class="card-text">Painel de controle</h3>
+                    <img class="img-card" src="../img-all/icons-sistema/painel-controle.png" alt="Painel de controle">
+                    <h3 class="card-text">C panel</h3>
                 </div>
             </a>
 
             <a class="link-card" href="">
                 <div class="card">
-                    <img class="img-card" src="../img-all/icons-sistema/bloqueio.png" alt="associados bloqueados">
-                    <h3 class="card-text">Meus associados</h3>
+                    <img class="img-card" src="../img-all/icons-sistema/vendas-icons.png" alt="Associados">
+                    <h3 class="card-text">Meus ssociados</h3>
                 </div>
             </a>
 
             <a class="link-card" href="">
                 <div class="card">
-                    <img class="img-card" src="../img-all/icons-sistema/bloqueio.png" alt="associados bloqueados">
-                    <h3 class="card-text">Bloqueados</h3>
+                    <img class="img-card" src="../img-all/icons-sistema/contratos.png" alt="Contratos de adesão">
+                    <h3 class="card-text">Contratos de adesão</h3>
                 </div>
             </a>
 
             <a class="link-card" href="">
                 <div class="card">
-                    <img class="img-card" src="../img-all/icons-sistema/bloqueio.png" alt="associados bloqueados">
-                    <h3 class="card-text">Bloqueados</h3>
+                    <img class="img-card" src="../img-all/icons-sistema/atividades-sistema.png" alt="Atividades-do-sistema">
+                    <h3 class="card-text">Atividades do sistema</h3>
                 </div>
             </a>
         </div>
@@ -69,29 +69,29 @@ $logado = $_SESSION['email'];
         <div class="container-cards">
             <a class="link-card" href="">
                 <div class="card">
-                    <img class="img-card" src="../img-all/icons-sistema/bloqueio.png" alt="associados bloqueados">
-                    <h3 class="card-text">Bloqueados</h3>
+                    <img class="img-card" src="../img-all/icons-sistema/clientes-atendidos.png" alt="Clientes atendidos">
+                    <h3 class="card-text">Clientes atendidos</h3>
                 </div>
             </a>
 
             <a class="link-card" href="">
                 <div class="card">
-                    <img class="img-card" src="../img-all/icons-sistema/bloqueio.png" alt="associados bloqueados">
-                    <h3 class="card-text">Bloqueados</h3>
+                    <img class="img-card" src="../img-all/icons-sistema/repasse.png" alt="Repasses">
+                    <h3 class="card-text">Repasses das clinicas</h3>
                 </div>
             </a>
 
             <a class="link-card" href="">
                 <div class="card">
-                    <img class="img-card" src="../img-all/icons-sistema/bloqueio.png" alt="associados bloqueados">
-                    <h3 class="card-text">Bloqueados</h3>
+                    <img class="img-card" src="../img-all/icons-sistema/vendas.png" alt="Controle de vendas">
+                    <h3 class="card-text">Controle de vendas</h3>
                 </div>
             </a>
 
             <a class="link-card" href="">
                 <div class="card">
-                    <img class="img-card" src="../img-all/icons-sistema/bloqueio.png" alt="associados bloqueados">
-                    <h3 class="card-text">Bloqueados</h3>
+                    <img class="img-card" src="../img-all/icons-sistema/novo-cliente.png" alt="Cadastrar associado">
+                    <h3 class="card-text">Cadastrar +1 cliente</h3>
                 </div>
             </a>
         </div>
@@ -101,14 +101,14 @@ $logado = $_SESSION['email'];
             <a class="link-card" href="">
                 <div class="card">
                     <img class="img-card" src="../img-all/icons-sistema/bloqueio.png" alt="associados bloqueados">
-                    <h3 class="card-text">Bloqueados</h3>
+                    <h3 class="card-text">Clientes bloqueados</h3>
                 </div>
             </a>
 
             <a class="link-card" href="">
                 <div class="card">
-                    <img class="img-card" src="../img-all/icons-sistema/bloqueio.png" alt="associados bloqueados">
-                    <h3 class="card-text">Bloqueados</h3>
+                    <img class="img-card" src="../img-all/icons-sistema/login.png" alt="associados bloqueados">
+                    <h3 class="card-text">Contratos inativos</h3>
                 </div>
             </a>
 
