--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 <body>
     <header>
         <a href="#"><img id='logo' src='img-all/logo-all/logo-sem-fundo.png' alt='logo do cartão MAIS FAMÍLIA'></a>
-        <a id="Link-login" href="sistema-log/login.html">Login</a>
+        <a id="Link-login" href="sistema-log/login.php">Login</a>
     </header>
 
     <main>
 
         <div id="container_one">
-            <h4>Rápido, fácil e prático! <a href="sistema-log/sistema-cartao.html"> AQUI</a></h4>
+            <h4>Rápido, fácil e prático!</h4>
 
             <h1>
-                Seja bem-vindo ao nosso sistema de consulta ao associado.
+                Seja bem-vindo ao nosso sistema de consulta ao associado. <a href="sistema-log/sistema-cartao.html">aqui</a>
             </h1>
 
             <p>
