--- a/sistema-log/sistema-cartao.html
+++ b/sistema-log/sistema-cartao.html
@@ -23,15 +23,14 @@ $logado = $_SESSION['email'];
 
 <body>
     <header>
-        <img id="img-logo" src="../img-all/logo-all/logo-sem-fundo.png" alt="logo do cartão MAIS FAMÍLIA">
+       <img id="img-logo" src="../img-all/logo-all/logo-sem-fundo.png" alt="logo do cartão MAIS FAMÍLIA">
 
         <div id="container-log">
             <a href="encerrar.php">Sair da conta</a>
-            <img id="img-login" src="../img-all/login-img/henrique.png" alt="foto-de-login">
+            <img id="img-login" src="../img-all/login-img/p.png" alt="foto-de-login">
         </div>
 
     </header>
-
 
     <main>
 
@@ -88,7 +87,7 @@ $logado = $_SESSION['email'];
                 </div>
             </a>
 
-            <a class="link-card" href="">
+            <a class="link-card" href="../sistema-cadastro/cadastro-clientes.php">
                 <div class="card">
                     <img class="img-card" src="../img-all/icons-sistema/novo-cliente.png" alt="Cadastrar associado">
                     <h3 class="card-text">Cadastrar +1 cliente</h3>
@@ -113,7 +112,7 @@ $logado = $_SESSION['email'];
             </a>
 
 
-            <a class="link-card" href="">
+            <a class="link-card" href="encerrar.php">
                 <div class="card" id="card-encerrar">
                     <img class="img-card" src="../img-all/icons-sistema/login.png" alt="Sair da conta">
                     <h3 class="card-text">Encerrar sessão</h3>
