--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h4>Rápido, fácil e prático!</h4>
 
             <h1>
-                Seja bem-vindo ao nosso sistema de consulta ao associado. <a href="sistema-log/sistema-cartao.html">aqui</a>
+                Seja bem-vindo ao nosso sistema de consulta ao associado. <a href="sistema-log/sistema-cartao.html">AQUI</a>
             </h1>
 
             <p>
