--- a/sistema-log/sistema-cartao.html
+++ b/sistema-log/sistema-cartao.html
@@ -18,6 +18,7 @@ $logado = $_SESSION['email'];
     <link rel="stylesheet" href="../styles/style-sistema/sistema-all.css" media="all">
     <link rel="stylesheet" href="../styles/style-sistema/sistema-ipad.css" media="screen">
     <link rel="stylesheet" href="../styles/style-sistema/sistema-screen.css" media="screen">
+    <link rel="shortcut icon" href="../img-all/favicon/favicon.ico" type="image/x-icon">
     <title> CAM - cartão MAIS FAMÍLIA</title>
 </head>
 
