--- a/sistema-cadastro/cadastro-clientes.html
+++ b/sistema-cadastro/cadastro-clientes.html
@@ -31,7 +31,7 @@ $logado = $_SESSION['email'];
     </header>
 
     <?php echo "<h1>Cadastramento feito por: {$logado}</h1>" ?>
-    <h1 id = "msg"> O cadastramento não esta disponivel em modo de smartphone</h1>
+    <h1 id = "msg"> O cadastramento não esta disponivel.</h1>
 
 
 
